mule-user-guide/v/3.2/global-settings-configuration-reference.adoc
= Global Settings Configuration Reference

This page provides details on the global settings you configure at the root level of a Mule configuration. Some of this information is pulled directly from `mule.xsd` and is cached. If the information appears to be out of date, refresh the page. For more information on configuration, see link:https://docs.mulesoft.com/mule-user-guide/v/3.2/about-mule-configuration[About Mule Configuration]. For information on threading profiles, see link:https://docs.mulesoft.com/mule-user-guide/v/3.2/tuning-performance[Tuning Performance].

== Configuration

Specifies defaults and general settings for the Mule instance.

=== Attributes of <configuration...>

[%header,cols="10,10,10,10,60"]
|===
|Name |Type |Required |Default |Description
|defaultResponseTimeout |string |no |10000 |The default period (ms) to wait for a synchronous response.
|defaultTransactionTimeout |string |no |30000 |The default timeout (ms) for transactions. This can also be configured on transactions, in which case the transaction configuration is used instead of this default.
|shutdownTimeout |integer |no |5000 |(As of Mule 2.2.2) The time in milliseconds to wait for any in-progress messages to finish processing before Mule shuts down. After this threshold has been reached, Mule starts interrupting threads, and messages can be lost. If you have a very large number of services in the same Mule instance, if you have components that take more than a couple seconds to process, or if you are using large payloads and/or slower transports, you should increase this value to allow more time for graceful shutdown. The value you specify is applied to services and separately to dispatchers, so the default value of 5000 milliseconds specifies that Mule has ten seconds to process and dispatch messages gracefully after shutdown is initiated.
|===

=== Child Elements of <configuration...>

[%header,cols="15,15,70"]
|===
|Name |Cardinality |Description
|default-threading-profile |0..1 |The default threading profile, used by components and by endpoints for dispatching and receiving if no more specific configuration is given.
|default-dispatcher-threading-profile |0..1 |The default dispatching threading profile, which modifies the default-threading-profile values and is used by endpoints for dispatching messages. This can also be configured on connectors, in which case the connector configuration is used instead of this default.
|default-receiver-threading-profile |0..1 |The default receiving threading profile, which modifies the default-threading-profile values and is used by endpoints for receiving messages. This can also be configured on connectors, in which case the connector configuration is used instead of this default.
|default-service-threading-profile |0..1 |The default service threading profile, which modifies the default-threading-profile and is used by services for processing messages. This can also be configured on models or services, in which case these configurations will be used instead of this default.
|abstract-reconnection-strategy |0..1 |The default reconnection strategy, used by connectors and endpoints. This can also be configured on connectors, in which case the connector configuration is used instead of this default. A placeholder for a reconnection strategy element. Reconnection strategies define how Mule should attempt to handle a connection failure.
|===
